--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             {% if site.use_logo %}
                 {% include logo.html %}
             {% else %}
-                {{ site.name }} <span class="version">{{ site.version }}</span>
+                {{ site.name }} <span class="version">Portfolio</span>
             {% endif %}
         </a>
     </h1>
@@ -15,7 +15,7 @@
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     {% if site.show_get_theme_btn %}
-        <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
+        <a href="https://sang0411.github.io/about/" class="get-theme" role="button">
             About me!
         </a>
     {% endif %}
