--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2409,7 +2409,7 @@ pre span {
 }
 footer {
     width: auto;
-    max-width: 50rem;
+    /* max-width: 50rem; */
     float: none;
     display: block;
     margin-right: auto;
