--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,3 +3,21 @@
 @import "jekflix";
 
 
+footer {
+    width: auto;
+    /* max-width: 50rem; */
+    float: none;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0;
+    padding-right: 0;
+    border-top: 1px solid #e6e6e6;
+    background: #fff;
+    padding: 1.25rem 1.5625rem;
+    margin-top: 3.125rem;
+    margin-bottom: 7.5rem;
+    font-family: "Titillium Web", "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
