--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,10 @@ layout: main
 {% else %}
     {% assign offset = 0 %}
 {% endif %}
+<link rel="stylesheet" href="../_site/assets/css/styles.css">
+
+
+
 
 <main class="home {% if site.show_hero and paginator == nil or paginator.page == 1 %}no-padding{% endif %}" role="main">
     {% if site.show_hero and paginator == nil or paginator.page == 1 %}
