--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -715,5 +715,6 @@
 
 
 /*profile css*/
-.about-css p{max-width:100%;}
-.about-css .profile-list{}
+.post-content .about-css p{max-width:100%;}
+.post-content .about-css ul{max-width:100%;}
+.post-content .about-css .profile-list{}
