--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -715,6 +715,6 @@
 
 
 /*profile css*/
-.post-content .about-css p{max-width:100%;}
-.post-content .about-css ul{max-width:100%;}
-.post-content .about-css .profile-list{}
+.about-css p{max-width:100%;}
+.about-css ul{max-width:100%;}
+.about-css .profile-list{}
