--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -216,4 +216,4 @@
     padding: rem(15px);
   }
 }
-.description{word-wrap: break-word; word-break: keep-all;}
+.description{word-wrap: break-word; word-break: keep-all; font-size: 1rem;}
