--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -1,178 +1,105 @@
 
-
-.outer-wrapper {
-  width: 100%;
+.slider {
+    position: relative;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.64);
+    margin-top: 26px;
 }
 
-.s-wrap {
-  width: 100%;
-  padding-bottom: 55%;
-  position: relative;
-  background-color: #efefe8;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-}
-.s-wrap > input {
-  display: none;
-}
-.s-wrap .s-content {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 500%;
-  height: 100%;
-  font-size: 0;
-  list-style: none;
-  transition: transform 1s;
-}
-.s-wrap .s-item {
-  display: inline-block;
-  width: 20%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.s-wrap .s-item-1 {
-  background-image: url("https://images.unsplash.com/photo-1457369804613-52c61a468e7d?crop=entropy&fit=crop&fm=jpg&h=600&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=800");
-}
-.s-wrap .s-item-2 {
-  background-image: url("https://images.unsplash.com/photo-1456318019777-ccdc4d5b2396?crop=entropy&fit=crop&fm=jpg&h=600&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=800");
-}
-.s-wrap .s-item-3 {
-  background-image: url("https://images.unsplash.com/photo-1428189923803-e9801d464d76?crop=entropy&fit=crop&fm=jpg&h=600&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=800");
-}
-.s-wrap .s-item-4 {
-  background-image: url("https://images.unsplash.com/photo-1422393462206-207b0fbd8d6b?crop=entropy&fit=crop&fm=jpg&h=600&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=800");
-}
-.s-wrap .s-item-5 {
-  background-image: url("https://images.unsplash.com/photo-1439736637365-748f240b24fb?crop=entropy&fit=crop&fm=jpg&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=800");
+.slider-inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
 }
 
-.s-type-1 .s-control {
-  position: absolute;
-  bottom: 18px;
-  left: 50%;
-  text-align: center;
-  transform: translateX(-50%);
-  transition-timing-function: ease-out;
-}
-.s-type-1 .s-control > label[class^=s-c-] {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  margin-right: 10px;
-  border-radius: 50%;
-  border: 1px solid #999;
-  background-color: #efefe8;
-  cursor: pointer;
-}
-.s-type-1 .s-nav label {
-  display: none;
-  position: absolute;
-  top: 50%;
-  padding: 5px 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-.s-type-1 .s-nav label::before, .s-type-1 .s-nav label::after {
-  content: "";
-  display: block;
-  width: 8px;
-  height: 24px;
-  background-color: #fff;
-}
-.s-type-1 .s-nav label::before {
-  margin-bottom: -12px;
-}
-.s-type-1 .s-nav label.left {
-  left: 20px;
-}
-.s-type-1 .s-nav label.left::before {
-  transform: rotate(45deg);
-}
-.s-type-1 .s-nav label.left::after {
-  transform: rotate(-45deg);
-}
-.s-type-1 .s-nav label.right {
-  right: 20px;
-}
-.s-type-1 .s-nav label.right::before {
-  transform: rotate(-45deg);
-}
-.s-type-1 .s-nav label.right::after {
-  transform: rotate(45deg);
-}
-.s-type-1 #s-1:checked ~ .s-content {
-  transform: translateX(0%);
-}
-.s-type-1 #s-1:checked ~ .s-control .s-c-1 {
-  background-color: #333;
-}
-.s-type-1 #s-1:checked ~ .s-nav .s-nav-1 {
-  display: block;
-}
-.s-type-1 #s-2:checked ~ .s-content {
-  transform: translateX(-20%);
-}
-.s-type-1 #s-2:checked ~ .s-control .s-c-2 {
-  background-color: #333;
-}
-.s-type-1 #s-2:checked ~ .s-nav .s-nav-2 {
-  display: block;
-}
-.s-type-1 #s-3:checked ~ .s-content {
-  transform: translateX(-40%);
-}
-.s-type-1 #s-3:checked ~ .s-control .s-c-3 {
-  background-color: #333;
-}
-.s-type-1 #s-3:checked ~ .s-nav .s-nav-3 {
-  display: block;
-}
-.s-type-1 #s-4:checked ~ .s-content {
-  transform: translateX(-60%);
-}
-.s-type-1 #s-4:checked ~ .s-control .s-c-4 {
-  background-color: #333;
-}
-.s-type-1 #s-4:checked ~ .s-nav .s-nav-4 {
-  display: block;
-}
-.s-type-1 #s-5:checked ~ .s-content {
-  transform: translateX(-80%);
-}
-.s-type-1 #s-5:checked ~ .s-control .s-c-5 {
-  background-color: #333;
-}
-.s-type-1 #s-5:checked ~ .s-nav .s-nav-5 {
-  display: block;
+.slider-open:checked + .slider-item {
+    position: static;
+    opacity: 100;
 }
 
-@keyframes slider-animation {
-  0%, 7% {
-    transform: translateX(0%);
-  }
-  12.5%, 19.5% {
-    transform: translateX(-20%);
-  }
-  25%, 32% {
-    transform: translateX(-40%);
-  }
-  37.5%, 44.5% {
-    transform: translateX(-60%);
-  }
-  50%, 57% {
-    transform: translateX(-80%);
-  }
-  62.5%, 69.5% {
-    transform: translateX(-60%);
-  }
-  75%, 82% {
-    transform: translateX(-40%);
-  }
-  87.5%, 94.5% {
-    transform: translateX(-20%);
-  }
+.slider-item {
+    position: absolute;
+    opacity: 0;
+    -webkit-transition: opacity 0.6s ease-out;
+    transition: opacity 0.6s ease-out;
+}
+
+.slider-item img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+.slider-control {
+    background: rgba(0, 0, 0, 0.28);
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    font-size: 40px;
+    height: 40px;
+    line-height: 35px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    cursor: pointer;
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    text-align: center;
+    width: 40px;
+    z-index: 10;
+}
+
+.slider-control.prev {
+    left: 2%;
+}
+
+.slider-control.next {
+    right: 2%;
+}
+
+.slider-control:hover {
+    background: rgba(0, 0, 0, 0.8);
+    color: #aaaaaa;
+}
+
+#slider-1:checked ~ .control-1,
+#slider-2:checked ~ .control-2,
+#slider-3:checked ~ .control-3,
+#slider-4:checked ~ .control-4 {
+    display: block;
+}
+
+.slider-indicators {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 10;
+}
+
+.slider-indicators li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.slider-bullet {
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-size: 35px;
+}
+
+.slider-bullet:hover {
+    color: #aaaaaa;
+}
+
+#slider-1:checked ~ .control-1 ~ .slider-indicators li:nth-child(1) .slider-bullet,
+#slider-2:checked ~ .control-2 ~ .slider-indicators li:nth-child(2) .slider-bullet,
+#slider-3:checked ~ .control-3 ~ .slider-indicators li:nth-child(3) .slider-bullet,
+#slider-4:checked ~ .control-4 ~ .slider-indicators li:nth-child(4) .slider-bullet {
+    color: #428bca;
 }
