--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -59,11 +59,14 @@ html, body {
   }
   
   .slide-1 {
-    background-image: url("https://source.unsplash.com/t7YycgAoVSw/1600x900");
+    background-image: url("https://source.unsplash.com/t7YycgAoVSw/1600x900") no-repeat;
+    background-size:contain;
   }
   .slide-2 {
-    background-image: url("https://source.unsplash.com/11H1SSVcIxc/1600x900");
+    background-image: url("https://source.unsplash.com/11H1SSVcIxc/1600x900") no-repeat;
+    background-size:contain;
   }
   .slide-3 {
-    background-image: url("https://source.unsplash.com/OlZ1nWLEEgM/1600x900");
+    background-image: url("https://source.unsplash.com/OlZ1nWLEEgM/1600x900") no-repeat;
+    background-size:contain;
   }
