--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -718,7 +718,7 @@
 
 .post-content img{padding:0;}
 
-@media (min-width: 37.5rem){}
+@media (min-width: 37.5rem){
 .post.two-columns {
     max-width: 80rem;
     flex-direction: row;
