--- a/assets/css/slick.css
+++ b/assets/css/slick.css
@@ -8,7 +8,7 @@
 	margin-bottom: 10px;
 }
 
-.quotes {margin-top:30px; border:1px solid #e3e3e3;}
+.quotes {margin-top:30px;}
 
 
 
@@ -104,6 +104,8 @@
 .slick-slide img
 {
     display: block;
+    border-radius: 6px;
+    border: 1px solid #e3e3e3;
 }
 .slick-slide.slick-loading img
 {
