--- a/assets/css/slick.css
+++ b/assets/css/slick.css
@@ -8,7 +8,7 @@
 	margin-bottom: 10px;
 }
 
-.quotes {margin-top:30px;}
+.quotes {margin-top:30px; box-shadow: 0px 18px 15px 0px rgb(0 0 0 / 25%);}
 
 
 
@@ -104,7 +104,7 @@
 .slick-slide img
 {
     display: block;
-    border-radius: 6px;
+    border-radius: 10px;
     border: 1px solid #e3e3e3;
 }
 .slick-slide.slick-loading img
