--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
 
-  <article class="post-content fullwidth profile-bg">
+  <article class="post-content fullwidth">
     {{ content }}
   </article>
 
