--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if site.disqus_username %}
 
 <section class="comments">
-    <h3>{{ site.translations.text.comments | default: "Comments" }}</h3>
+    <h3>{{ site.translations.text.comments | default: "How can I call you?" }}</h3>
     <div id="disqus_thread"></div>
 </section>
 <script type="text/javascript">
