--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,6 +2,7 @@
 
 <section class="comments">
     <h3>{{ site.translations.text.comments | default: "How can I call you?" }}</h3>
+    <div>testttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt</div>
     <div id="disqus_thread"></div>
 </section>
 <script type="text/javascript">
