--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -717,7 +717,7 @@
 /*add css*/
 
 
-.post-content{overflow:hidden;}
+// .post-content{overflow:hidden;}
 .post-content img{padding:0;}
 
 @media (min-width: 37.5rem){
