--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 
 <!DOCTYPE html>
-<html lang="{{ site.language }}" class="no-js">
+<html lang="ko" class="no-js">
     {% include head.html %}
     <body class="has-push-menu">
         {% include svg-icons.html %}
