--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,9 +32,9 @@ layout: main
                 <h1 class="title">{{ featured.title }}</h1>
                 <p class="description">{{ featured.subtitle }}</p>
                 <div class="buttons">
-                    <a href="{{ featured.url | prepend: site.baseurl }}" role="button" class="button">
+                    <a href="https://sang0411.github.io/work/" role="button" class="button">
                         <svg><use xlink:href="#icon-read"></use></svg>
-                        <span>{{ site.translations.button.read_now | default: "Read Now" }}</span>
+                        <span>{{ site.translations.button.read_now | default: "Watch it Now" }}</span>
                     </a>
                 </div>
             </div>
