--- a/_sass/_form.scss
+++ b/_sass/_form.scss
@@ -46,7 +46,8 @@
     background: $themeColor;
     font-size: rem(18px);
     width: 100%;
-    border: 1px solid darken($themeColor, 30%);
+    border: 0;
+    border-radius:10px;
     border-width: 1px 1px 3px;
     margin-top: rem(50px);
     margin-bottom: rem(10px);
