--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -23,15 +23,15 @@ layout: page
         <input type="hidden" name="_next" value="{{ site.url }}{{ site.sent_message_url }}" />
         <input type="hidden" name="_language" value="{{ site.language }}" />
 
-        <input type="text" name="name" placeholder="{{ site.translations.contact.placeholders.name | default: 'Your name' }}" v-validate="'required'"
+        <input type="text" name="name" placeholder="{{ site.translations.contact.placeholders.name | default: '이름을 입력해주세요.' }}" v-validate="'required'"
                :class="{ 'has-error': errors.has('name') }">
         <span v-if="errors.has('name')" v-cloak>${ errors.first('name') }</span>
 
-        <input type="text" name="email" placeholder="{{ site.translations.contact.placeholders.email | default: 'Your email' }}" v-validate="'required|email'"
+        <input type="text" name="email" placeholder="{{ site.translations.contact.placeholders.email | default: 'Email을 입력해주세요.' }}" v-validate="'required|email'"
                :class="{ 'has-error': errors.has('email') }">
         <span v-if="errors.has('email')" v-cloak>${ errors.first('email') }</span>
 
-        <textarea name="message" onkeyup="adjust_textarea(this)" placeholder="{{ site.translations.contact.placeholders.message | default: 'Your message' }}" v-validate="'required'"
+        <textarea name="message" onkeyup="adjust_textarea(this)" placeholder="{{ site.translations.contact.placeholders.message | default: '보내실 내용을 입력해주세요.' }}" v-validate="'required'"
                   :class="{ 'has-error': errors.has('message') }"></textarea>
         <span v-if="errors.has('message')" v-cloak>${ errors.first('message') }</span>
 
@@ -58,14 +58,14 @@ const dictionary = {
   {{ site.translations.contact.errors.locale | default: 'ko' }}: {
     custom: {
       name: {
-        required: "{{ site.translations.contact.errors.empty_name | default: 'Name is required' }}"
+        required: "{{ site.translations.contact.errors.empty_name | default: '이름을 입력해주세요.' }}"
       },
       email: {
-        required: "{{ site.translations.contact.errors.empty_email | default: 'Email is required' }}",
-        email: "{{ site.translations.contact.errors.invalid_email | default: 'Email is invalid' }}"
+        required: "{{ site.translations.contact.errors.empty_email | default: 'Email을 입력해주세요.' }}",
+        email: "{{ site.translations.contact.errors.invalid_email | default: 'Email 양식에 맞게 입력해주세요.' }}"
       },
       message: {
-        required: "{{ site.translations.contact.errors.empty_message | default: 'Message is required' }}"
+        required: "{{ site.translations.contact.errors.empty_message | default: '내용을 입력해주세요.' }}"
       }
     }
   }
