--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
     {% include links.html %}
 
     <p>
-      <span>Sangflix</span> was made with by <a href="https://rossener.com" target="_blank" class="creator">Sang-hyun Lee</a>
+      <span>Sangflix</span> was made with by <a href="https://sang0411.github.io/" target="_blank" class="creator">Sang-hyun Lee</a>
     </p>
 </footer>
 
