--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         </a>
       {% endif %}
       {% if site.linkedin_username %}
-        <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/sang-hyun-lee-5821561b1/" title="LinkedIn">
           <svg><use xlink:href="#icon-linkedin"></use></svg>
         </a>
       {% endif %}
@@ -56,7 +56,7 @@
     {% assign social_urls = social_urls | append: '"https://www.instagram.com/' | append: site.instagram_username | append: '",' %}
 {% endif %}
 {% if site.linkedin_username %}
-    {% assign social_urls = social_urls | append: '"https://www.linkedin.com/in/' | append: site.linkedin_username | append: '",' %}
+    {% assign social_urls = social_urls | append: '"https://www.linkedin.com/in/sang-hyun-lee-5821561b1/' | append: site.linkedin_username | append: '",' %}
 {% endif %}
 
 <script type="application/ld+json">
