--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,7 +2,9 @@
 
 
 <style>
-    .contact-txt p{color:#2a2e2e;}
+    .contact-txt p{color:#2a2e2e;line-height: 1.5;}
+    .contact-txt p a{color:#ff0a16;}
+    .contact-txt p a:hover{color:#808080;}
 </style>
 
 <section class="comments">
