--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
         </a>
       {% endif %}
       {% if site.instagram_username %}
-        <a href="https://www.instagram.com/{{ site.instagram_username }}" title="Instagram">
+        <a href="https://www.instagram.com/leesanghyun.jpg/?hl=ko" title="Instagram">
           <svg><use xlink:href="#icon-instagram"></use></svg>
         </a>
       {% endif %}
       {% if site.facebook_username %}
-        <a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
+        <a href="https://www.facebook.com/profile.php?id=100015123848853" title="Facebook">
           <svg><use xlink:href="#icon-facebook"></use></svg>
         </a>
       {% endif %}
@@ -46,10 +46,10 @@
     {% assign social_urls = social_urls | append: '"https://www.linkedin.com/in/sang-hyun-lee-5821561b1/' | append: site.linkedin_username | append: '",' %}
 {% endif %}
 {% if site.instagram_username %}
-    {% assign social_urls = social_urls | append: '"https://www.instagram.com/' | append: site.instagram_username | append: '",' %}
+    {% assign social_urls = social_urls | append: '"https://www.instagram.com/leesanghyun.jpg/?hl=ko' | append: site.instagram_username | append: '",' %}
 {% endif %}
 {% if site.facebook_username %}
-    {% assign social_urls = social_urls | append: '"https://www.facebook.com/' | append: site.facebook_username | append: '",' %}
+    {% assign social_urls = social_urls | append: '"https://www.facebook.com/profile.php?id=100015123848853' | append: site.facebook_username | append: '",' %}
 {% endif %}
 {% if site.github_username %}
     {% assign social_urls = social_urls | append: '"https://github.com/' | append: site.github_username | append: '",' %}
