--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,7 +9,7 @@
 
 <section class="comments">
     <h3>{{ site.translations.text.comments | default: "How can I call you?" }}</h3>
-    <div class=".contact-txt"><p>If you want to contact us, please contact <a href="#">'About'</a> menu click or <a href="#">2003lsh2003@naver.com</a> on the website.</p></div>
+    <div class="contact-txt"><p>If you want to contact us, please contact <a href="#">'About'</a> menu click or <a href="#">2003lsh2003@naver.com</a> on the website.</p></div>
 </section>
 
 {% endif %}
