--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 
 <style>
     .contact-txt p{color:#2a2e2e;line-height: 1.5;}
-    .contact-txt p a{color:#ff0a16;}
+    .contact-txt p a{color:#ff0a16; text-decoration:none;}
     .contact-txt p a:hover{color:#808080;}
 </style>
 
