--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,10 @@ layout: main
     {% assign offset = 0 %}
 {% endif %}
 
+<style>
+    .box-item:last-child{display:none;}
+</style>
+
 <main class="home {% if site.show_hero and paginator == nil or paginator.page == 1 %}no-padding{% endif %}" role="main">
     {% if site.show_hero and paginator == nil or paginator.page == 1 %}
         <!-- Hero -->
