--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -2,6 +2,12 @@
 layout: page
 ---
 
+
+<style>
+  .post-content a{color:#000;}
+  .post-content li:before{content: "-";}
+</style>
+
 <div class="staff">
   {% if page.photo %}
     <img class="img-rounded" src="{{ page.photo }}" alt="{{ author.display_name }}">
