--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -5,7 +5,10 @@ layout: page
 
 <style>
   .post-content a{color:#000;}
+  .post-content a:hover{color:#ff0a16;}
+  .post-content li{list-style:none;}
   .post-content li:before{content: "-";}
+  .post-content ul{padding-left:0;}
 </style>
 
 <div class="staff">
