--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -8,7 +8,7 @@ layout: page
   .post-content a:hover{color:#ff0a16;}
   .post-content li{list-style:none;}
   .post-content li:before{content: "-";}
-  .post-content ul{padding-left:0;}
+  .post-content ul{padding-left:1em;}
 </style>
 
 <div class="staff">
