--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -8,6 +8,8 @@ layout: page
   .post-content a:hover{color:#ff0a16;}
   .post-content li{list-style:none;}
   .post-content li:before{content: "-";}
+  .post-content li:first-child{display:none;}
+  .post-content li:last-child{display:none;}
   .post-content ul{padding-left:1em;}
 </style>
 
