--- a/_includes/head.html
+++ b/_includes/head.html
@@ -100,4 +100,15 @@
     <script>
         document.querySelector('html').classList.remove('no-js');
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217187411-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-217187411-1');
+    </script>
+
 </head>
